# thermalysis_pinch

./: CompositeDiagram.csv  GrandCompositeCurve.csv  HeatCascade.csv  MANIFEST.in  ProblemTable.csv  PyPinch.py  ShiftedCompositeDiagram.csv  generatecss.bat  pinch_analysis_data.csv  pyproject.toml  requirements.txt  run.py  tailwind.config.js
pinch/: app.py
pinch/config/: main.py  project_default.json
pinch/pages/: pi-data.py  pi-page-demo.py  pi-page1.py  pi-page2.py  pi-report.py  pi-start.py
pinch/project/: page1.py  page2.py
thermalysis_pinch/: PyPinch.py  app.py
thermalysis_pinch/config/: main.py
thermalysis_pinch/pages/: PyPinch.py  pi-data.py  pi-gcc.py  pi-hcas.py  pi-page-demo.py  pi-pinchet.py  pi-ptable.py  pi-report.py  pi-stec.py  pi-tecd.py  pi-tid.py
thermalysis_pinch/project/: report.py  start.py
thermalysis_pinch/schemas/: __init__.py
