[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinch"
version = "0.1.0"
description = "pinch analysis app"
authors = [
    {name = "Sonu", email = "sonucp11@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
        "agility @git+https://github.com/sandeeprah/agility.git@main",
        "flask",
        "dash",
        "dash-ag-grid",
        "pandas",
        "pydantic"
        
]